The PBC pairing-based cryptography library. See COPYING for license.

Ben Lynn

Changes between PBC version 0.4.18 and 0.4.17

* Fix bilinear_map() bug
* Replace darray with callback in curve finding functions

Changes between PBC version 0.4.17 and 0.4.16

* Handle identity elements in pairings

Changes between PBC version 0.4.16 and 0.4.15

* Removed bonehfranklin.c example
* Upgraded GPL to version 3

Changes between PBC version 0.4.15 and 0.4.14

* Stop element_from_hash crashing on GT for D curves (reported by Paul Miller)

Changes between PBC version 0.4.14 and 0.4.13

* PBC should work with C++ programs

Changes between PBC version 0.4.13 and 0.4.12

* Fixed minor bugs in D and G pairings

Changes between PBC version 0.4.12 and 0.4.11

* Fixed preprocessed exponentiation bug introduced in 0.4.10 (reported by
  Ian Goldberg)

Changes between PBC version 0.4.11 and 0.4.10

* Plugged memory leaks introduced in the last version

Changes between PBC version 0.4.10 and 0.4.9

* Multiplicative subgroups: can now generate random elements and
  hash to output group of pairing 

Changes between PBC version 0.4.9 and 0.4.8

* Patched memory leak for D, G pairings (reported by Michael Cheng)

Changes between PBC version 0.4.8 and 0.4.7

* configure.ac fixes (Joe Cooley)
* example/zss.c fixes (Joe Cooley)

Changes between PBC version 0.4.7 and 0.4.6

* Bugfix: element_cmp for zero case in prime field
* Symmetric pairing checks for other examples
* Faster D, G pairings

Changes between PBC version 0.4.6 and 0.4.5

* Type G pairings (embedding degree 10)
* Bugfix for version 0.4.5 random point generation

Changes between PBC version 0.4.5 and 0.4.4

* Symmetric pairing checks for example/hess.c and example/paterson.c
* Shipsey-Stange algorithm for type E pairing (not used by default)
* Random point generation is faster in some cases
* Added benchmark/ellnet.c

Changes between PBC version 0.4.4 and 0.4.3

* Optimizations for most pairings